--- a/06-Fulcrum.Rmd
+++ b/06-Fulcrum.Rmd
@@ -98,7 +98,7 @@ formtable(fulcform)
 
 ### Fulcrum App: Data Interface {#fuldat}
 
-The data connectivity options in Fulcrum App are significant, as noted above and outlined in the Data Interface table. An important note is the ability of the Fulcrum App Mobile components that supports exporting the 'Collections' on a mobile device to a standard .json file.  This is a stand-out feature compared to Survey123 and Fulcrum, and can be critical when building in a back-up protocol for cases when internet data transfer is not available.  The Bay Study Power App project included this option to export to .json because there are some survey stations in which internet access is low or not available [See Bay Study Fulcrum App demo](#powdem).
+The data connectivity options in Fulcrum App are significant, as noted above and outlined in the Data Interface table. 
 
 
 ```{r fulcdat, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap='Data Interface Options', out.width='100%', tab.asp=.75, tab.align='left' }
