--- a/09-BigFin.Rmd
+++ b/09-BigFin.Rmd
@@ -65,19 +65,19 @@ knitr::include_graphics("images/BigFin/Modular.JPG", error = FALSE)
 
 Big Fin measurement boards can be manufactured in any length up to the largest size, 2.5 meters. Boards are waterproof, lightweight, rugged, and can wash down easily; Easy to maintain. Big Fin boards interface directly with DCSLinkStream and the user can program many input keys along the board. The measurement resolution of the board is 100 microns. The boards gets calibrated initially and can be re-calibrated in 30 seconds. Drift is temperature dependent but the unit does not drift quickly because the electronics keep it warm and relatively stable. 
 
-```{r BFboard1, echo=FALSE, fig.cap="BigFin CEO Chris Bonzek demonstrating the water proof control center of the fish measurement boards", out.width = '90%'}
+```{r BFboard1, echo=FALSE, fig.cap="BigFin CEO Chris Carroll demonstrating the water proof control center of the fish measurement boards", out.width = '90%'}
 knitr::include_graphics("images/BigFin/BigFin9.PNG", error = FALSE)
 ```
 
 
-```{r BFboard2, echo=FALSE, fig.cap="BigFin CEO Chris Bonzek demonstrating the use of the stylis with the programmed short-cut buttons for species or other category.", out.width = '90%'}
+```{r BFboard2, echo=FALSE, fig.cap="BigFin CEO Chris Carroll demonstrating the use of the stylis with the programmed short-cut buttons for species or other category.", out.width = '90%'}
 knitr::include_graphics("images/BigFin/BigFin15.PNG", error = FALSE)
 ```
 
 
 
 
-```{r BFboard3, echo=FALSE, fig.cap="BigFin CEO Chris Bonzek demonstrating the battery pack on the back of the fish boards which may be changed out if necessary.", out.width = '90%'}
+```{r BFboard3, echo=FALSE, fig.cap="BigFin CEO Chris Carroll demonstrating the battery pack on the back of the fish boards which may be changed out if necessary.", out.width = '90%'}
 knitr::include_graphics("images/BigFin/BigFin10.PNG", error = FALSE)
 ```
 
