--- a/04-survey123.Rmd
+++ b/04-survey123.Rmd
@@ -68,35 +68,7 @@ s123bus  <- survey123$Business_Model
 ```{r s1form, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap='Forms Options', out.width='70%', tab.asp=.75, tab.align='left' }
 
 library(kableExtra)
-
-s123form[] <- lapply(s123form, function(x) ifelse(is.na(x), "", x))
-s123form %>%
-  # Group by category column and collapse repeating values
-  group_by(Category) %>%
-  mutate(Category = ifelse(duplicated(Category), "", Category))  %>%
-  group_by(Feature) %>%
-  mutate(Feature = ifelse(duplicated(Feature), "", Feature))  %>%
-  
-  
-kable(s123form, format = "html", escape = F, caption = 'Forms Options',
-      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews"),
-      booktabs = TRUE, align =  "l") %>%
-  kable_paper() %>% 
-  kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
-  
-  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE) %>%
-  column_spec(2, width_min = "2.5cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "1.5cm") %>%
-  column_spec(3, width_max = "2cm") %>%
-  column_spec(4, width_min = "2cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "2cm") %>%
-  column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "2cm") %>%  
-  column_spec(6, width_max = "5cm") %>%  
-  scroll_box(width = "800px", height = "600px") 
+formtable(s123form)
 ```
 
 
@@ -107,39 +79,7 @@ kable(s123form, format = "html", escape = F, caption = 'Forms Options',
 ```{r s12dat, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap='Data Interface Options', out.width='100%', tab.asp=.75, tab.align='left' }
 
 library(kableExtra)
-
-s123dat[] <- lapply(s123dat, function(x) ifelse(is.na(x), "", x))
-
-
-s123dat %>%
-  # Group by category column and collapse repeating values
-  group_by(Category) %>%
-  mutate(Category = ifelse(duplicated(Category), "", Category))  %>%
-  group_by(Feature) %>%
-  mutate(Feature = ifelse(duplicated(Feature), "", Feature))  %>%
-  
-
-
-kable(s123dat, format = "html", escape = F, caption = 'Data Interface Options',
-      col.names = c("Category","Feature"	,"Available","Description",		"Group Notes","External  Reviews"),
-      booktabs = TRUE, align =  "l") %>%
-  kable_paper() %>% 
-  kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
-  
-  column_spec(1, width_min = "2.5cm", bold = TRUE,) %>%
-  column_spec(1, width_max = "3cm", bold = TRUE) %>%
-  column_spec(2, width_min = "2.5cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "1.5cm") %>%
-  column_spec(3, width_max = "2cm") %>%
-  column_spec(4, width_min = "2cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "2cm") %>%
-  column_spec(5, width_max = "5cm") %>%
-  column_spec(6, width_min = "2cm") %>%  
-  column_spec(6, width_max = "5cm") %>%  
-  scroll_box(width = "800px", height = "600px") 
-
+datatable(s123dat)
 ```
 
 
@@ -152,6 +92,8 @@ kable(s123dat, format = "html", escape = F, caption = 'Data Interface Options',
 
 
 library(kableExtra)
+#phototable(s123phot)
+
 
 s123phot[] <- lapply(s123phot, function(x) ifelse(is.na(x), "", x))
 
@@ -198,27 +140,7 @@ kable(s123phot, format = "html", escape = F, caption = 'Photo Integration and Ex
 ```{r s12har, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap='Hardware Platform Options', out.width='100%', tab.asp=.75, tab.align='left' }
 
 library(kableExtra)
-
-s123hard[] <- lapply(s123hard, function(x) ifelse(is.na(x), "", x)) 
-#s123hard <- s123hard #%>% select(1:3,)
-
-kable(s123hard, format = "html", escape = F, caption = 'Hardware Platform Options',
-      col.names = c("Feature"	,"Available",	"Group Notes","External  Reviews"),
-      booktabs = TRUE, align =  "l") %>%
-  kable_paper() %>% 
-  kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
-  
-  column_spec(1, width_min = "7cm", bold = TRUE) %>%
-  column_spec(1, width_max = "8cm", bold = TRUE) %>%
-  column_spec(2, width_min = "3cm" ) %>%
-  column_spec(2, width_max = "3.5cm" ) %>%
-  column_spec(3, width_min = "4.5cm") %>%
-  column_spec(3, width_max = "5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-
-  scroll_box(width = "800px", height = "600px") 
-
+hardtable(s123hard)
 ```
 
 
@@ -229,26 +151,7 @@ kable(s123hard, format = "html", escape = F, caption = 'Hardware Platform Option
 ```{r s12sec, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap='Security Factors', out.width='100%', tab.asp=.75, tab.align='left' }
 
 library(kableExtra)
-
-s123sec[] <- lapply(s123sec, function(x) ifelse(is.na(x), "", x))
-
-kable(s123sec, format = "html", escape = F, caption = 'Security Factors', booktabs = TRUE, align =  "l",col.names = c("Feature"	,"Available",	"Description","Group Notes","External  Reviews")) %>%
-  kable_paper() %>% 
-  kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
-  
-  column_spec(1, width_min = "3cm", bold = TRUE) %>%
-  column_spec(1, width_max = "4cm", bold = TRUE) %>%
-  column_spec(2, width_min = "2cm" ) %>%
-  column_spec(2, width_max = "3cm" ) %>%
-  column_spec(3, width_min = "3cm") %>%
-  column_spec(3, width_max = "4cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
-  column_spec(5, width_max = "5cm") %>%
-
-  scroll_box(width = "800px", height = "600px") 
-
+sectable(s123sec) 
 ```
 
 
@@ -262,30 +165,8 @@ kable(s123sec, format = "html", escape = F, caption = 'Security Factors', bookta
 
 ```{r s123bus, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap='Business Model and Pricing', out.width='100%', tab.asp=.75, tab.align='left' }
 
-
-
 library(kableExtra)
-
-s123bus[] <- lapply(s123bus, function(x) ifelse(is.na(x), "", x))
-s123bus %>%
-  group_by(Feature) %>%
-  mutate(Feature = ifelse(duplicated(Feature), "", Feature))  %>%
-kable(s123bus, format = "html", escape = F, caption = 'Business Model and Pricing',  booktabs = TRUE,col.names = c("Feature"	,"Description","Price","Group Notes","External Reviews"), align =  "l") %>%
-  kable_paper() %>% 
-  kable_styling(full_width =TRUE, fixed_thead = TRUE, font_size = 18) %>%
-  
-  column_spec(1, width_min = "4cm", bold = TRUE) %>%
-  column_spec(1, width_max = "5cm", bold = TRUE) %>%
-  column_spec(2, width_min = "4cm" ) %>%
-  column_spec(2, width_max = "5cm" ) %>%
-  column_spec(3, width_min = "2cm") %>%
-  column_spec(3, width_max = "2.5cm") %>%
-  column_spec(4, width_min = "4.5cm") %>%
-  column_spec(4, width_max = "5cm") %>%
-  column_spec(5, width_min = "4.5cm") %>%
-  column_spec(5, width_max = "5cm") %>%
-  scroll_box(width = "800px", height = "600px") 
-
+bustable(s123bus)
 
 ```
 
