--- a/index.Rmd
+++ b/index.Rmd
@@ -29,4 +29,7 @@ knitr::include_graphics(c("images/bothlogo.JPG"))
 ```
 
 
-
+```{js, echo = FALSE}
+title=document.getElementById('header');
+title.innerHTML = '<img src=""images/bothlogo.JPG"" alt="ibothlogo.JPG">' + title.innerHTML
+```
