--- a/summary.Rmd
+++ b/summary.Rmd
@@ -43,7 +43,7 @@ Two tools were developed to promote the transition to electronic data entry meth
 Adopting digital data entry protocols will require time to develop the field data entry software, establish procedures to transfer data to central database, and train survey staff to use these new tools. In addition, IEP surveys will have to budget for the purchase and maintenance of mobile field devices, data loggers and/or electronic fish measurement boards. **In the long term, the savings in time and effort with the reduction in data entry and post-collection processing will significantly outweigh equipment and training time expenditures.**
 
 
-NOTE: This Executive Summary was shared with IEP Coordinators Team in Sept of 2023. This report may be downloaded using the below link and Table 1 from this report is included here. 
+NOTE: This Executive Summary was shared with IEP Coordinators Team in Sept of 2023. 
 ```{r e_surv, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE }
 library(here)
 xfun::embed_file(c("docs/ExecSumm_edevice_Sept2023.pdf"))
