--- a/summary.Rmd
+++ b/summary.Rmd
@@ -54,10 +54,12 @@ xfun::embed_file(c("docs/ExecSumm_edevice_Sept2023.pdf"))
 
 <!-- # specifying font style for bold because H3 does not render bold "**" option-->
 ::: {#Tab1  style="font-size:18px; font-family: Segoe UI;"} 
-**Top 7 software applications used by IEP for field data entry with pros and cons for each criteria category, listed in order reviewed by the DUWG sub-team. The criteria used for comparison are described here [criteria category](#crittop).**
+**Top software applications used by IEP for field data entry with the most notable* pros and cons for each criteria category.**  The criteria used for comparison are described here [criteria category](#crittop). 
 :::
 
+*Note: Categories without a specified Pro or Con indicated mean that app meets basic requirements for survey data collection for that category.
 
+*Note: Apps are listed in order reviewed by the DUWG sub-team.
 
 ```{r procon, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap=NULL, out.width='100%', tab.asp=.75, tab.align='left'}
 
@@ -79,8 +81,7 @@ proscons %>%
   
 kable(proscons, format = "html", escape = F,  booktabs = TRUE, align='l') %>%
   kable_paper() %>% 
-  # kable_styling(bootstrap_options = c("striped", "hover"),full_width = FALSE, fixed_thead = TRUE,
-  #               font_size = 20) %>%
+  footnote(general = "*Categories without a specified Pro or Con indicated mean that app meets basic requirements for survey data collection for that category.", general_title = "")%>%
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   #column_spec(1, width_min = "4cm", bold = TRUE, italic = F) %>%
   column_spec(1, width_max = "4.5cm", bold = TRUE, italic = F) %>%
