--- a/index.Rmd
+++ b/index.Rmd
@@ -20,8 +20,8 @@ always_allow_html: yes
 
 The initial information was gleaned from interviews and presentations organized during a DUWG Electronic Data Entry Device ("e-device") focus group (6/2022-6/2023), but these reports are far from exhaustive and there are many software/hardware options for field data entry that have not yet been reviewed.  Meanwhile communication and cloud processing technology is advancing rapidly.  
 
-**This initiative generally asks that all IEP survey teams that have e-device experience, or those that are adding digital data-entry tools to their program, please share these experiences and help to develop this resource for other IEP surveys seeking to update data entry protocols.**
 
+**General Request: To help develop this resource for other IEP surveys seeking to update their data entry protocols, the initiative requests that all IEP surveys that have e-device experience, or those adding digital data-entry tools to their programs, [contribute and share](#contrb) their experience**
 
 
 ```{r ieplog, echo=FALSE,  out.width= "70%", fig.align='center',fig.cap=""}
