--- a/summary.Rmd
+++ b/summary.Rmd
@@ -54,12 +54,11 @@ xfun::embed_file(c("docs/ExecSumm_edevice_Sept2023.pdf"))
 
 <!-- # specifying font style for bold because H3 does not render bold "**" option-->
 ::: {#Tab1  style="font-size:18px; font-family: Segoe UI;"} 
-**Top software applications used by IEP for field data entry with the most notable* pros and cons for each criteria category.**  The criteria used for comparison are described here [criteria category](#crittop). 
+**Top software applications used by IEP for field data entry with the most notable* pros and cons for each criteria category.**  The criteria used for comparison are described here [criteria category](#crittop). Note: Apps are listed in order reviewed by the DUWG sub-team.
 :::
 
-*Note: Categories without a specified Pro or Con indicated mean that app meets basic requirements for survey data collection for that category.
+*NOTE: The categories without a specified Pro or Con points listed indicate that the app meets the basic requirements needed for survey data collection for that category.
 
-*Note: Apps are listed in order reviewed by the DUWG sub-team.
 
 ```{r procon, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap=NULL, out.width='100%', tab.asp=.75, tab.align='left'}
 
@@ -67,7 +66,6 @@ library(kableExtra)
 library(dplyr)
 library(here)
 
-# 'The top software tools used for field data entry are listed and the Pros and Cons of each tool are briefly described.'
 
 # Replace NAs with empty strings 
 proscons[is.na(proscons)] <- ""
@@ -81,7 +79,7 @@ proscons %>%
   
 kable(proscons, format = "html", escape = F,  booktabs = TRUE, align='l') %>%
   kable_paper() %>% 
-  footnote(general = "*Categories without a specified Pro or Con indicated mean that app meets basic requirements for survey data collection for that category.", general_title = "")%>%
+  # footnote(general = "*Categories without a specified Pro or Con indicated mean that app meets basic requirements for survey data collection for that category.", general_title = "")%>%
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   #column_spec(1, width_min = "4cm", bold = TRUE, italic = F) %>%
   column_spec(1, width_max = "4.5cm", bold = TRUE, italic = F) %>%
