edits on summary

--- a/summary.Rmd
+++ b/summary.Rmd
@@ -54,10 +54,10 @@ xfun::embed_file(c("docs/ExecSumm_edevice_Sept2023.pdf"))
 
 <!-- # specifying font style for bold because H3 does not render bold "**" option-->
 ::: {#Tab1  style="font-size:18px; font-family: Segoe UI;"} 
-**Top software applications used by IEP for field data entry with the most notable* pros and cons for each criteria category.**  The criteria used for comparison are described here [criteria category](#crittop). Note: Apps are listed in order reviewed by the DUWG sub-team.
+**Top software applications used by IEP for field data entry with the most notable* pros and cons for each criteria category.** Apps are listed in order reviewed by the DUWG sub-team.
 :::
 
-*NOTE: The categories without a specified Pro or Con points listed indicate that the app meets the basic requirements needed for survey data collection for that category.
+*NOTE: The categories without a specified Pro or Con points listed are those that meet basic requirements for survey data collection; See [criteria tables](#crittop) for each app.
 
 
 ```{r procon, echo = FALSE, include=TRUE, message=FALSE, warning=FALSE,  tab.cap=NULL, out.width='100%', tab.asp=.75, tab.align='left'}
