--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -8,7 +8,7 @@ This bookdown document is intended to be a 'living document' which develops as m
 
 ### Goals
 
-In general, the goal of the electronic data entry sub-group of the DUWG is to research field data entry software and hardware devices (“e-devices”), and to generate resources that support IEP survey leads in selecting and deploying digital data-entry procedures.  **This sub-group does not intend to suggest a single solution or software choice for all IEP surveys.** Rather, the sub-group aims to provide reviews and research on tech approaches for a range of survey applications, and group members may report on direct hands-on software trials or tests of new methods. Optimally, these activities will promote the formation of an e-device users network which will provide resources for IEP survey staff who are newer to these methods and technologies.
+In general, the goal of the electronic data entry sub-group of the DUWG is to research field data entry software and hardware devices (“e-devices”), and to generate resources that support IEP survey leads in selecting and deploying digital data-entry procedures. **This sub-group aims to provide reviews and research on tech approaches for a range of survey applications rather than suggesting a single solution or software choice for all IEP surveys.** Expert users and product vendors are invited to present and subgroup members may report on direct hands-on software trials or tests of new methods. Optimally, these activities will promote the formation of an e-device users network which will provide resources for IEP survey staff who are newer to these methods and technologies.
 
 ### Approach
 
@@ -47,8 +47,6 @@ speakrs %>%
 
 kable(speakrs, format = "html", escape = F, caption = "Guest speakers and local trials.", booktabs = TRUE,align='l') %>%
   kable_paper() %>% 
-  # kable_styling(bootstrap_options = c("striped", "hover"),full_width = FALSE, fixed_thead = TRUE,
-  #               font_size = 20) %>%
   kable_styling(full_width =FALSE, fixed_thead = TRUE, font_size = 18) %>%
   #column_spec(1, width_min = "4cm", bold = TRUE, italic = F) %>%
   column_spec(1, width_max = "4.5cm", bold = TRUE, italic = F) %>%
